PATCH: filter na dbody alignment fix

--- a/src/component/body/Body.module.css
+++ b/src/component/body/Body.module.css
@@ -113,8 +113,9 @@
 
 .bodyContent {
     display: flex;
-    gap: 30px;
+    /* gap: 30px; */
     margin-top: 30px;
+    
   }
 @media screen and (max-width: 425px) {
   .hideText {
