--- a/src/component/body/ProductCard/Product.module.css
+++ b/src/component/body/ProductCard/Product.module.css
@@ -1,11 +1,10 @@
 /* ProductGrid.module.css */
 
 .productGrid {
+    /* margin-left: 100px; */
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3,1fr);
     gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
     padding: 20px;
   }
   
@@ -13,7 +12,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: transparent;
     transition: transform 0.3s ease;
     overflow: hidden;
   }
@@ -24,7 +23,7 @@
   
   .imageContainer {
     position: relative;
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1/1.3;
     background-color: #f5f5f5;
     overflow: hidden;
   }
